--- a/periscope-web/src/main/webapp/pages/project/report/allReports/docsOfNationalPriority.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/report/allReports/docsOfNationalPriority.xhtml
@@ -13,7 +13,8 @@
 
         <ui:define name="content">
 
-            <h1>#{msgs['docsOfNationalPriority']}</h1>
+            <center><h1>#{msgs['docsOfNationalPriority']}</h1></center>
+            <br/>
             <h:panelGrid columns="2">
 
                 <h:column>
