--- a/periscope-web/src/main/webapp/pages/project/report/allReports/mainApplicant.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/report/allReports/mainApplicant.xhtml
@@ -15,23 +15,26 @@
         <ui:define name="content">
 
 
-            <h1>#{msgs['main.applicant']}</h1>
+            <center><h1>#{msgs['main.applicant']}</h1></center>
             <br></br>
             <h:form id="chart" styleClass="container">
+                <p:accordionPanel>
+                    <p:tab title="#{msgs['filters']}" titleStyle="font-size:initial; color:initial">
+                        <i:filtro controller="#{report}" />
 
-                <i:filtro controller="#{report}" />
-                
-                <h:panelGrid columns="2"  style="margin-top: 20px;margin-bottom: 20px">
-                    <p:outputLabel value="#{msgs['applicant.type']}:"/>  
-                    <p:selectOneMenu id="cmbAppType" value="#{report.filtro.applicantType}" style="width: 500px">
-                        <f:selectItem itemLabel="#{msgs['none']}" itemValue=""/>
-                        <f:selectItems value="#{applicantTypeRepository.all}" var="t" itemValue="#{t.name}" itemLabel="#{t.name}" />	
+                        <h:panelGrid columns="2"  style="margin-top: 20px;margin-bottom: 20px">
+                            <p:outputLabel value="#{msgs['applicant.type']}:"/>  
+                            <p:selectOneMenu id="cmbAppType" value="#{report.filtro.applicantType}" style="width: 500px">
+                                <f:selectItem itemLabel="#{msgs['none']}" itemValue=""/>
+                                <f:selectItems value="#{applicantTypeRepository.all}" var="t" itemValue="#{t.name}" itemLabel="#{t.name}" />	
 
-                        <p:ajax update="tudo,@this"
-                                listener="#{report.refreshChart()}" />
-                    </p:selectOneMenu>
-                </h:panelGrid>
-                
+                                <p:ajax update=":#{p:component('tudo')},@this"
+                                        listener="#{report.refreshChart()}" />
+                            </p:selectOneMenu>
+                        </h:panelGrid>
+                    </p:tab>
+                </p:accordionPanel>
+
                 <h:panelGrid columns="1" id="tudo" styleClass="container" >
 
                     <p:outputLabel value="#{msgs['empty']}" rendered="#{report.model.series.get(0).getData().size()==0}" />
