Adicionado um botão para o admin reidexar todas as patentes do projeto no Lucene.

--- a/periscope-web/src/main/webapp/pages/project/projectHome.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/projectHome.xhtml
@@ -1,23 +1,29 @@
 <?xml version='1.0' encoding='utf-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:p="http://primefaces.org/ui">
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
-<ui:composition template="/template/template.xhtml">
+    <ui:composition template="/template/template.xhtml">
 
-	<ui:define name="content">
-		<ui:include src="/template/flashmessages.xhtml" />
-		<center>
-			<div class="hero-unit">
-			<h2> #{msgs['welcome.project']} #{currentProject.title}</h2>
-			<p>#{currentProject.description}</p>
-			</div>
-			
-		</center>
-	</ui:define>
+        <ui:define name="content">
+            <ui:include src="/template/flashmessages.xhtml" />
+            <center>
+                <div class="hero-unit">
+                    <h2> #{msgs['welcome.project']} #{currentProject.title}</h2>
+                    <p>#{currentProject.description}</p>
+                </div>
+                
+                
+                <h:form rendered="#{currentUser.userLevel.accessLevel == 10}">
+                    <h:commandLink value="Reindex Project" style="color:white"
+                                   class="btn btn-large btn-info" action="#{projectController.reindexAll(currentProject)}"/>
+                </h:form>
 
-</ui:composition>
+            </center>
+        </ui:define>
+
+    </ui:composition>
 </html>
